; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_action_start_playlist_association.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_action_start_playlist_association.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FILE_PATH_DETECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @action_start_playlist_association to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_start_playlist_association(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = call i32* (...) @playlist_get_cached()
  store i32* %7, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %22

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* @FILE_PATH_DETECT, align 4
  %14 = call i32 @file_path_str(i32 %13)
  %15 = call i32 @playlist_set_default_core_path(i32* %12, i32 %14)
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* @FILE_PATH_DETECT, align 4
  %18 = call i32 @file_path_str(i32 %17)
  %19 = call i32 @playlist_set_default_core_name(i32* %16, i32 %18)
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @playlist_write_file(i32* %20)
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %11, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32* @playlist_get_cached(...) #1

declare dso_local i32 @playlist_set_default_core_path(i32*, i32) #1

declare dso_local i32 @file_path_str(i32) #1

declare dso_local i32 @playlist_set_default_core_name(i32*, i32) #1

declare dso_local i32 @playlist_write_file(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
